fixed alignment of input and button

--- a/style/main.css
+++ b/style/main.css
@@ -203,7 +203,11 @@ header{
     margin:30px 0;
 }
 
-
+.emailForm{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .input,
 .submit {
@@ -212,14 +216,14 @@ header{
     -webkit-appearance: none;
     border: 0;
     margin: 0;
-    padding: 30px 50px;
+    padding: 0 50px;
 }
 
 .input {
     border: 1px solid lightgray;
     font-size: 20px;
     font-style: italic;
-    padding: 29px 50px;
+    height: 80px;
 
 }
 
@@ -234,6 +238,7 @@ header{
     outline: none;
     cursor: pointer;
     margin-left:15px;
+    height: 82px;
 }
 
 .submit:hover{
@@ -263,7 +268,7 @@ header{
 
     font-style: italic;
     color: #848789;
-    font-size:24px;
+    font-size:20px;
 }
 
 .testimonialsSection .address{
@@ -419,21 +424,17 @@ footer{
     }
 
     .emailForm{
-        display: inline-block;
+        flex-direction: column;
 
     }
     .input {
-        display: block;
         font-size: 16px;
 
     }
 
-    .submit{
+    .submit {
         margin-top: 25px;
-        margin-left: 0;
-        display: inline-block;
     }
-    
 }
 
 
